--- a/package.json
+++ b/package.json
@@ -21,19 +21,22 @@
 		"@angular/platform-browser": "~10.0.0",
 		"@angular/platform-browser-dynamic": "~10.0.0",
 		"@angular/router": "~10.0.0",
+		"bootstrap": "^4.5.0",
+		"ngx-bootstrap": "^5.6.1",
+		"ngx-take-until-destroy": "^5.4.0",
 		"rxjs": "~6.5.5",
 		"tslib": "^2.0.0",
-		"zone.js": "~0.10.3",
-		"ngx-take-until-destroy": "^5.4.0"
+		"zone.js": "~0.10.3"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "~0.1000.0",
 		"@angular-devkit/build-ng-packagr": "~0.1000.0",
 		"@angular/cli": "~10.0.0",
 		"@angular/compiler-cli": "~10.0.0",
-		"@types/node": "^12.11.1",
+		"@ngneat/spectator": "^5.11.0",
 		"@types/jasmine": "~3.5.0",
 		"@types/jasminewd2": "~2.0.3",
+		"@types/node": "^12.11.1",
 		"codelyzer": "^6.0.0-next.1",
 		"jasmine-core": "~3.5.0",
 		"jasmine-spec-reporter": "~5.0.0",
